# Toolscreen

./: .gitignore  CMakeLists.txt  README.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  question.yml
src/: config_defaults.h  config_toml.cpp  config_toml.h  default.toml  dllmain.cpp  fake_cursor.h  gui.cpp  gui.h  input_hook.cpp  logic_thread.cpp  mirror_thread.cpp  mirror_thread.h  obs_thread.cpp  profiler.cpp  render.cpp  render.h  render_thread.cpp  render_thread.h  shared_contexts.cpp  utils.cpp  utils.h  version.cpp  version.h  window_overlay.cpp  window_overlay.h
src/gui/: tab_appearance.inl  tab_basic_general.inl  tab_basic_other.inl  tab_hotkeys.inl  tab_inputs.inl  tab_modes.inl  tab_window_overlays.inl
